--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 
 <!doctype html>
 
-<html></html>
+<html>
+    <head>
+        <meta charset="utf-8">
+
+        <link rel="stylesheet" href="styles.css">
+    <title>Home Page</title>
+	
+    </head>
+</html>
