--- a/index.html
+++ b/index.html
@@ -9,4 +9,14 @@
     <title>Home Page</title>
 	
     </head> 
+
+    <body>
+        <script src="scripts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.js"></script>
+        
+        <form>
+            <button class="experimentButton" type="button" onclick="window.location.href='Experiment2.html'">Go to experiment 2</button>
+
+        </form>
+    </body>
 </html>
