--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.js"></script>
         
         <form>
+            <button class="experimentButton" type="button" onclick="window.location.href='Experiment.html'">Go to experiment 1</button>
             <button class="experimentButton" type="button" onclick="window.location.href='Experiment2.html'">Go to experiment 2</button>
-
+            <button class="experimentButton" type="button" onclick="window.location.href='Experiment3.html'">Go to experiment 3</button>
         </form>
     </body>
 </html>
