--- a/Experiment3.html
+++ b/Experiment3.html
@@ -11,20 +11,16 @@
 
 <style>
   #logo-container {
-     display: inline-block;
+     display: inline;
      margin-right: 10px;
   }
   
   input[type="text"], button {
      font-size: 16px;
      padding: 8px;
+     border: 2px;
+     border-color: gray;
   }
-  
-  button {
-     background-color: #333;
-     color: #fff;
-     border: none;
-     cursor: pointer;
-  }
+
 </style>
 
