--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="experimentButton" type="button" onclick="window.location.href='Experiment.html'">Go to experiment 1</button>
             <button class="experimentButton" type="button" onclick="window.location.href='Experiment2.html'">Go to experiment 2</button>
             <button class="experimentButton" type="button" onclick="window.location.href='Experiment3.html'">Go to experiment 3</button>
+	    <button class="experimentButton" type="button" onclick="window.location.href='Experiment4.html'">Go to experiment 4</button>
         </form>
     </body>
 </html>
